tests/ui/concurrent_cached_cache_err_result_fallback_exclusive.stderr
error: `result_fallback` and `cache_err` are mutually exclusive
 --> tests/ui/concurrent_cached_cache_err_result_fallback_exclusive.rs:4:4
  |
4 | fn my_fn(k: i32) -> Result<i32, ()> {
  |    ^^^^^
